# routes/inspirations.js
@@ -10,8 +10,8 @@ router.post('/',isAuthenticated,  inspirationsController.createInspiration);
 router.get('/:id',isAuthenticated,  inspirationsController.getSingleInspiration);
 router.put('/:id',isAuthenticated,  inspirationsController.updateInspiration);
 router.delete('/:id',isAuthenticated,  inspirationsController.deleteInspiration);
-router.get('/user/:id',isAuthenticated,  inspirationsController.getInspirationsByUserId);
-router.get('/user/:id/type/:type',isAuthenticated,  inspirationsController.getInspirationsByUserIdAndType);
-router.get('/user/:id/step/:step',isAuthenticated,  inspirationsController.getInspirationsByUserIdAndStep);
+router.get('/user_id/:user_id',isAuthenticated,  inspirationsController.getInspirationsByUserId);
+router.get('/user_id/:user_id/type/:type',isAuthenticated,  inspirationsController.getInspirationsByUserIdAndType);
+router.get('/user_id/:user_id/step/:step',isAuthenticated,  inspirationsController.getInspirationsByUserIdAndStep);
 
 module.exports = router;
